[gd_scene load_steps=33 format=3 uid="uid://0btuj42nxe1i"]

[ext_resource type="Script" path="res://scripts/player/Player.gd" id="1_c5v5b"]
[ext_resource type="Texture2D" uid="uid://dbxat6bctpln2" path="res://assets/main-character/adventurer-1.3-Sheet.png" id="2_lf0l1"]
[ext_resource type="Script" path="res://scripts/state_machine/StateMachine.gd" id="3_x30cb"]
[ext_resource type="Script" path="res://scripts/player/Idle.gd" id="4_ixpqx"]
[ext_resource type="Script" path="res://scripts/player/Running.gd" id="5_qjea8"]
[ext_resource type="Script" path="res://scripts/player/JumpSquatting.gd" id="6_faia4"]
[ext_resource type="Script" path="res://scripts/player/Jumping.gd" id="7_dkute"]
[ext_resource type="Script" path="res://scripts/player/Falling.gd" id="8_jd3pa"]
[ext_resource type="Script" path="res://scripts/player/WallSliding.gd" id="9_qja03"]
[ext_resource type="Script" path="res://scripts/player/WallJumping.gd" id="10_ei8od"]
[ext_resource type="Script" path="res://scripts/player/Inventory.gd" id="11_7m6qk"]
[ext_resource type="PackedScene" uid="uid://bkwjtmoxihqhi" path="res://scenes/Weight.tscn" id="13_aem74"]
[ext_resource type="AudioStream" uid="uid://c8rhfrx6l2g8k" path="res://assets/sounds/player/player_jump.wav" id="14_xgkqy"]
[ext_resource type="AudioStream" uid="uid://05jgthyi4fw0" path="res://assets/sounds/player/player_jump2.wav" id="15_c5wdn"]
[ext_resource type="AudioStream" uid="uid://b4e02ufia3yyj" path="res://assets/sounds/player/player_steps4.wav" id="16_w7ydb"]
[ext_resource type="AudioStream" uid="uid://xorsol13v35t" path="res://assets/sounds/player/player_throw.wav" id="17_4mr74"]
[ext_resource type="AudioStream" uid="uid://b3pbocqu0he3u" path="res://assets/sounds/player/player_holding_light_medium2.wav" id="18_3j0sx"]
[ext_resource type="AudioStream" uid="uid://bwh1rvhvofawe" path="res://assets/sounds/player/player_holding_light_medium.wav" id="18_okk0c"]
[ext_resource type="AudioStream" uid="uid://dljk8547sqfbl" path="res://assets/sounds/player/player_holding_heavy.wav" id="19_mj5md"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hibgp"]
size = Vector2(10, 29)

[sub_resource type="GDScript" id="GDScript_cogws"]
script/source = "class_name Hurt
extends PlayerState

func enter(_msg := {}) -> void:
	player.animation.play(\"hurt\")

# Called every frame. 'delta' is the elapsed time since the previous frame.
func physics_update(delta):
	if player.is_on_floor():
		player.velocity = Vector2.ZERO
		player.fsm.transition_to(\"Idle\")

	player.apply_gravity(delta)

	player.move_and_slide()
"

[sub_resource type="CircleShape2D" id="CircleShape2D_i0l0e"]
radius = 5.0

[sub_resource type="Animation" id="Animation_lmu57"]
length = 0.001

[sub_resource type="Animation" id="Animation_f7svv"]
resource_name = "falling"
length = 0.3333
loop_mode = 1
step = 0.1666
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RegularSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1666),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RegularSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, 4)]
}

[sub_resource type="Animation" id="Animation_qg8ie"]
resource_name = "hurt"
length = 0.25
step = 0.0417
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RegularSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0417, 0.0834, 0.1251, 0.1668, 0.2085, 0.4998),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [62, 63, 64, 65, 66, 67, 68]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RegularSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2.035, 0.335)]
}

[sub_resource type="Animation" id="Animation_epjd6"]
resource_name = "idle"
length = 0.664
loop_mode = 1
step = 0.166
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RegularSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166, 0.332, 0.498),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RegularSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_tjnb7"]
resource_name = "jumpSquatting"
length = 0.0833
step = 0.0167
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RegularSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0167),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [14, 15]
}

[sub_resource type="Animation" id="Animation_7fraf"]
resource_name = "jumping"
length = 0.1333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RegularSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RegularSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-2, 2)]
}

[sub_resource type="Animation" id="Animation_y3xn6"]
resource_name = "running"
length = 0.9996
loop_mode = 1
step = 0.1666
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RegularSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1666, 0.3332, 0.4998, 0.6664, 0.833),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RegularSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, 0)]
}

[sub_resource type="Animation" id="Animation_40lqm"]
resource_name = "wall_sliding"
length = 0.3333
loop_mode = 1
step = 0.1666
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RegularSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1666),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [79, 80]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RegularSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xowt7"]
_data = {
"RESET": SubResource("Animation_lmu57"),
"falling": SubResource("Animation_f7svv"),
"hurt": SubResource("Animation_qg8ie"),
"idle": SubResource("Animation_epjd6"),
"jump_squatting": SubResource("Animation_tjnb7"),
"jumping": SubResource("Animation_7fraf"),
"running": SubResource("Animation_y3xn6"),
"wall_sliding": SubResource("Animation_40lqm")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_mry84"]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 8
collision_mask = 21
floor_constant_speed = true
floor_snap_length = 8.0
script = ExtResource("1_c5v5b")
max_speed = 150.0
acceleration = 500.0

[node name="RegularSprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-4, 0)
texture = ExtResource("2_lf0l1")
hframes = 8
vframes = 12
frame = 13

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_hibgp")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_x30cb")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_ixpqx")

[node name="Running" type="Node" parent="StateMachine"]
script = ExtResource("5_qjea8")

[node name="JumpSquatting" type="Node" parent="StateMachine"]
script = ExtResource("6_faia4")

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource("7_dkute")

[node name="Falling" type="Node" parent="StateMachine"]
script = ExtResource("8_jd3pa")

[node name="WallSliding" type="Node" parent="StateMachine"]
script = ExtResource("9_qja03")

[node name="WallJumping" type="Node" parent="StateMachine"]
script = ExtResource("10_ei8od")

[node name="Hurt" type="Node" parent="StateMachine"]
script = SubResource("GDScript_cogws")

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(11, 3)
shape = SubResource("CircleShape2D_i0l0e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xowt7")
}

[node name="Inventory" type="Node" parent="." groups=["Persist"]]
script = ExtResource("11_7m6qk")
long_jump = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mry84")

[node name="Weight" parent="." instance=ExtResource("13_aem74")]

[node name="PickupRemoteTransform" type="RemoteTransform2D" parent="."]
position = Vector2(0, -29)

[node name="SFX" type="Node" parent="."]

[node name="Jump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("14_xgkqy")
volume_db = -9.496
bus = &"SFX"

[node name="LongJump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("15_c5wdn")
volume_db = -9.496
bus = &"SFX"

[node name="Landing" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("16_w7ydb")
volume_db = -9.496
bus = &"SFX"

[node name="Throw" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("17_4mr74")
volume_db = -9.496
bus = &"SFX"

[node name="PickupLight" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("18_okk0c")
volume_db = -12.661
bus = &"SFX"

[node name="PickupMedium" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("18_3j0sx")
volume_db = -12.661
bus = &"SFX"

[node name="PickupHeavy" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("19_mj5md")
volume_db = -12.661
bus = &"SFX"

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/JumpSquatting" method="_on_animation_player_animation_finished"]
